# mnt-opdom-explorer

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE.md  README.md  main.py  noxfile.py  op_domain_plot.py  plot.py  pyproject.toml  requirements.txt
.github/: dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: ci.yml  codeql-analysis.yml  coverage.yml  reusable-change-detection.yml
core/: __init__.py  app.py  plot.py
gui/: main_window.py
gui/widgets/: AnsiTextEdit.py  DoubleRangeSlider.py  DragDropWidget.py  IconGroupBox.py  IconLoader.py  InfoTag.py  PlotWidget.py  RangeSelector.py  SettingsWidget.py  __init__.py  drag_drop_widget.py  icon_group_box.py  icon_loader.py  info_tag.py  layout_visualizer_widget.py  plot_operational_domain_widget.py  plot_widget.py  range_selector.py  settings_widget.py
src/mnt/opdom_explorer/: __init__.py  main.py
src/mnt/opdom_explorer/core/: __init__.py  app.py  plot.py
src/mnt/opdom_explorer/gui/: main_window.py
src/mnt/opdom_explorer/gui/widgets/: __init__.py  drag_drop_widget.py  icon_group_box.py  icon_loader.py  info_tag.py  layout_visualizer_widget.py  plot_operational_domain_widget.py  range_selector.py  settings_widget.py
src/mnt/opdom_explorer/resources/: mnt-opdom-explorer.desktop.in
test/core/: test_app.py  test_plot.py
test/resources/: op_domain.csv
widgets/: DragDropWidget.py  PlotWidget.py  RangeSelector.py  SettingsWidget.py
