[build-system]
requires = [
    "setuptools>=61",
    "setuptools_scm>=7",
]
build-backend = "setuptools.build_meta"

[project]
name = "mnt-opdom-explorer"
description = "Explore Operational Domains of SiDB logic gates"
readme = "README.md"
authors = [
    { name = "Marcel Walter", email = "marcel.walter@tum.de" },
    { name = "Jan Drewniok", email = "jan.drewniok@tum.de" }
]
keywords = ["MNT", "field-coupled nanocomputing", "silicon dangling-bonds", "logic", "physical simulation", "design automation", "operational domain", "GUI"]
license = { file = "LICENSE.md" }
requires-python = ">=3.9"
version = "0.1.0"

dependencies = [
    "PyQt6==6.7.1",
    "matplotlib==3.9.0",
    "mnt.pyfiction==0.6.5",
    "pandas==2.2.2",
    "PyQt6==6.7.1",
    "qtawesome==1.3.1",
    "scikit-learn==1.5.2",
]

[project.optional-dependencies]
test = [
    "coverage>=6.0", # Ensure coverage is included for testing
]

[project.urls]
Repository = "https://github.com/cda-tum/mnt-opdom-explorer"
Homepage = "https://www.cda.cit.tum.de/research/nanotech/"
Issues = "https://github.com/cda-tum/mnt-opdom-explorer/issues"
Discussions = "https://github.com/cda-tum/mnt-opdom-explorer/discussions"

[tool.setuptools.packages.find]
include = ["core", "gui", "widgets"]

[tool.ruff]
line-length = 120
preview = true
unsafe-fixes = true


[tool.ruff.lint]
extend-select = [
    "A",           # flake8-builtins
#    "ANN",         # flake8-annotations
    "ARG",         # flake8-unused-arguments
    "ASYNC",       # flake8-async
    "B",  "B904",  # flake8-bugbear
    "C4",          # flake8-comprehensions
#    "D",           # pydocstyle
    "EM",          # flake8-errmsg
    "EXE",         # flake8-executable
    "FA",          # flake8-future-annotations
    "FLY",         # flynt
    "FURB",        # refurb
    "I",           # isort
    "ICN",         # flake8-import-conventions
    "ISC",         # flake8-implicit-str-concat
    "LOG",         # flake8-logging-format
    "N",           # flake8-naming
    "NPY",         # numpy
    "PERF",        # perflint
    "PGH",         # pygrep-hooks
    "PIE",         # flake8-pie
#    "PL",          # pylint
    "PT",          # flake8-pytest-style
    "PTH",         # flake8-use-pathlib
    "PYI",         # flake8-pyi
    "Q",           # flake8-quotes
    "RET",         # flake8-return
    "RSE",         # flake8-raise
    "RUF",         # Ruff-specific
    "S",           # flake8-bandit
    "SLF",         # flake8-self
    "SLOT",        # flake8-slots
    "SIM",         # flake8-simplify
    "T20",         # flake8-print
    "TCH",         # flake8-type-checking
    "TID251",      # flake8-tidy-imports.banned-api
    "TRY",         # tryceratops
    "UP",          # pyupgrade
    "YTT",         # flake8-2020
]

ignore = [
    "ANN101",  # Missing type annotation for `self` in method
    "ANN102",  # Missing type annotation for `cls` in classmethod
    "ISC001",  # Conflicts with formatter
    "S101",    # Use of assert detected
]

[tool.ruff.lint.pydocstyle]
convention = "google"
